# ScoreFinder

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
scorefinder/: __init__.py  app.py  config.py  database.py  import_service.py  models.py  schemas.py  search_service.py  storage_service.py  utils.py
scorefinder/static/: app.css  app.js
scorefinder/templates/: index.html
tests/: test_config.py  test_database.py  test_import_service.py  test_utils.py
