[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "scorefinder"
version = "0.1.0"
description = "ローカルで楽譜を検索・保存・再検索するためのアプリケーション"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ddgs>=9.11.4,<10.0.0",
  "fastapi>=0.116.0,<0.117.0",
  "httpx>=0.28.0,<0.29.0",
  "jinja2>=3.1.6,<4.0.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[project.scripts]
scorefinder = "scorefinder.app:main"

[tool.hatch.build.targets.wheel]
packages = ["scorefinder"]
